# Qt

./: .gitignore
Download_Manager/: CMakeLists.txt  DownloadItemWidget.cpp  DownloadItemWidget.h  DownloadItemWidget.ui  DownloadManager.cpp  DownloadManager.h  DownloadTask.cpp  DownloadTask.h  Download_Manager.cpp  Download_Manager.h  Download_Manager.ui  main.cpp
EmployeeForm/: EmployeeForm.cpp  EmployeeForm.h  EmployeeForm.qrc  EmployeeForm.sln  EmployeeForm.ui  EmployeeForm.vcxproj  EmployeeForm.vcxproj.filters  main.cpp
Employee_Managemen_System/: CMakeLists.txt  CMakeUserPresets.json
Employee_Managemen_System/Employee_Managemen_System/: CMakeLists.txt  CMakeUserPresets.json  EmployeeDialog.cpp  EmployeeDialog.h  EmployeeDialog.ui  Employee_Managemen_System.cpp  Employee_Managemen_System.h  Employee_Managemen_System.ui  main.cpp
QtPaint/: CMakeLists.txt  CMakeUserPresets.json  Canvas.cpp  Canvas.h  QtPaint.cpp  QtPaint.h  QtPaint.ui  Resource.qrc  main.cpp
TextEditor/: CMakeLists.txt  TextEditor.cpp  TextEditor.h  TextEditor.ui  main.cpp
